--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             cursor: pointer;
             flex-shrink: 0;
         }
-        .username { font-weight: 700; font-size: 1rem; cursor: pointer; }
+        .username { font-weight: 700; font-size: 1rem; cursor: pointer; display: flex; align-items: center; gap: 8px; }
         .timestamp { font-size: 0.8rem; color: var(--text-gray); }
         .post-img { width: 100%; border-radius: 16px; margin-top: 15px; border: 1px solid rgba(0,0,0,0.05); }
 
@@ -265,6 +265,21 @@
         #video-modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #0f172a; z-index: 3000; flex-direction: column; align-items: center; justify-content: center; padding: 20px; }
         .video-grid { display: flex; gap: 20px; width: 100%; justify-content: center; flex-wrap: wrap; margin-bottom: 30px; }
         video { width: 500px; height: 350px; border-radius: 24px; background: #1e293b; object-fit: cover; max-width: 100%; }
+
+        /* CUSTOM DIALOG STYLES */
+        #custom-dialog-overlay {
+            display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.3); backdrop-filter: blur(5px); z-index: 9999;
+            justify-content: center; align-items: center; padding: 20px;
+        }
+        .dialog-box {
+            background: white; width: 100%; max-width: 400px; border-radius: 24px;
+            padding: 25px; box-shadow: 0 20px 50px rgba(0,0,0,0.15);
+            text-align: center; display: flex; flex-direction: column; gap: 15px;
+        }
+        .dialog-title { font-weight: 800; font-size: 1.2rem; color: var(--text-dark); }
+        .dialog-input { display: none; width: 100%; padding: 12px; border: 1px solid #e2e8f0; border-radius: 12px; font-family: inherit; margin-top: 5px; }
+        .dialog-actions { display: flex; gap: 10px; justify-content: center; margin-top: 5px; }
 
         /* ========================================= */
         /* === RESPONSIVE DEVICE DETECTION PATCH === */
@@ -358,6 +373,18 @@
 </head>
 <body>
 
+    <div id="custom-dialog-overlay">
+        <div class="dialog-box">
+            <div id="dialog-icon" style="font-size: 2rem; color: var(--accent-color); margin-bottom: 5px;"></div>
+            <div id="dialog-msg" class="dialog-title">Message</div>
+            <input type="text" id="dialog-input" class="dialog-input" placeholder="Type here...">
+            <div class="dialog-actions">
+                <button class="btn-modern" id="dialog-cancel" style="background: #e2e8f0; color: #64748b; display:none;" onclick="closeCustomDialog(false)">Cancel</button>
+                <button class="btn-modern" id="dialog-ok" onclick="closeCustomDialog(true)">OK</button>
+            </div>
+        </div>
+    </div>
+
     <div id="auth-modal">
         <div class="glass-panel" style="width: 380px; text-align: center; border-radius: 30px;">
             <div style="font-size: 3.5rem; margin-bottom: 15px; background: var(--accent-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
@@ -409,11 +436,23 @@
             <div id="view-feed" style="width: 100%; display: flex; flex-direction: column; align-items: center; gap: 25px;">
                 <div class="glass-panel">
                     <textarea id="post-input" placeholder="What's happening?"></textarea>
-                    <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(0,0,0,0.05);">
-                        <label class="btn-modern" style="background: rgba(99, 102, 241, 0.1); color: var(--accent-color); box-shadow: none; padding: 8px 16px;">
-                            <i class="fas fa-image"></i> Photo
-                            <input type="file" id="post-image" accept="image/*" style="display: none;">
-                        </label>
+                    <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: space-between; align-items: center; margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(0,0,0,0.05);">
+                        <div style="display:flex; gap:10px; align-items:center; flex-wrap: wrap;">
+                            <label class="btn-modern" style="background: rgba(99, 102, 241, 0.1); color: var(--accent-color); box-shadow: none; padding: 8px 16px;">
+                                <i class="fas fa-image"></i> Photo
+                                <input type="file" id="post-image" accept="image/*" style="display: none;">
+                            </label>
+                            
+                            <select id="post-privacy" class="input-modern" style="margin:0; width: auto; padding: 8px; font-size: 0.9rem;">
+                                <option value="public">🌎 Public</option>
+                                <option value="friends">👥 Friends</option>
+                                <option value="private">🔒 Only Me</option>
+                            </select>
+                            
+                            <label style="font-size: 0.9rem; display: flex; align-items: center; gap: 5px; cursor: pointer;">
+                                <input type="checkbox" id="post-livestream"> <span style="color: #ef4444; font-weight: bold;">🔴 Live</span>
+                            </label>
+                        </div>
                         <button class="btn-modern" onclick="createPost()">Post</button>
                     </div>
                 </div>
@@ -435,7 +474,10 @@
             <div id="view-messages" style="display: none;">
                 <div class="glass-panel messenger-container" style="background: rgba(255,255,255,0.9); border: none; padding: 0; overflow: hidden;">
                     <div class="friend-list" id="msg-friend-list">
-                        <div style="padding: 10px; font-weight: bold; opacity: 0.5;">FRIENDS</div>
+                        <div style="padding: 10px; font-weight: bold; opacity: 0.5; display: flex; justify-content: space-between; align-items: center;">
+                            <span>CHATS</span>
+                            <i class="fas fa-plus-circle" style="cursor: pointer; color: var(--accent-color);" onclick="createGroupChat()" title="Create Group"></i>
+                        </div>
                     </div>
                     <div class="chat-area">
                         <div class="chat-header">
