--- a/index.html
+++ b/index.html
@@ -40,12 +40,6 @@
             flex-direction: column;
         }
 
-        /* --- Animations --- */
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        @keyframes slideUp { from { transform: translateY(20px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
-        .animate-enter { animation: slideUp 0.4s ease-out forwards; }
-        .fade-in { animation: fadeIn 0.3s ease-out forwards; }
-
         /* --- Header --- */
         header {
             height: 70px;
@@ -91,7 +85,7 @@
             display: none; position: absolute; top: 50px; right: 0;
             background: white; width: 180px; border-radius: 16px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.1); overflow: hidden;
-            animation: slideUp 0.2s ease-out; border: 1px solid rgba(0,0,0,0.05);
+            animation: slideUp 0.2s ease-out; border: 1px solid rgba(0,0,0,0.05); z-index: 200;
         }
         .user-dropdown-item {
             padding: 12px 20px; display: flex; align-items: center; gap: 10px;
@@ -207,22 +201,29 @@
         video.post-media { background: black; }
 
         .post-actions { margin-top:20px; display:flex; gap:20px; color:#64748b; border-top:1px solid rgba(0,0,0,0.05); padding-top:15px; }
-        
+        .comments-section { margin-top: 15px; background: rgba(255,255,255,0.5); border-radius: 12px; padding: 15px; display: none; }
+        .comment { font-size: 0.9rem; margin-bottom: 8px; border-bottom: 1px solid rgba(0,0,0,0.03); padding-bottom: 8px; word-break: break-word; }
+
         /* Messenger */
         #view-messages { display: none; width: 100%; height: 100%; }
         .messenger-container { display: flex; height: 100%; max-width: 900px; margin: 0 auto; gap: 20px; min-height: 0; }
         .friend-list { width: 250px; background: rgba(255,255,255,0.5); border-radius: 24px; padding: 20px; overflow-y: auto; flex-shrink: 0; }
         .chat-area { flex: 1; display: flex; flex-direction: column; background: rgba(255,255,255,0.8); border-radius: 24px; padding: 20px; min-width: 0; min-height: 0; }
         .chat-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 1px solid rgba(0,0,0,0.05); padding-bottom: 15px; flex-shrink: 0; }
-        .chat-window { flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 8px; padding: 10px; min-height: 0; }
+        .chat-window { flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 15px; padding: 10px; min-height: 0; }
+
+        /* MESSAGE ROW LAYOUT FIX */
+        .msg-row { display: flex; width: 100%; align-items: flex-end; gap: 10px; }
+        .msg-row.mine { justify-content: flex-end; }
+        .msg-row.theirs { justify-content: flex-start; }
 
         .msg-bubble { 
-            width: fit-content; max-width: 85%; padding: 12px 18px; border-radius: 20px; 
+            width: fit-content; max-width: 80%; padding: 12px 18px; border-radius: 20px; 
             font-size: 0.95rem; line-height: 1.5; word-wrap: break-word; word-break: break-word;
-            white-space: pre-wrap; position: relative;
+            white-space: pre-wrap;
         }
-        .msg-mine { align-self: flex-end; background: var(--accent-gradient); color: white; border-bottom-right-radius: 4px; }
-        .msg-theirs { align-self: flex-start; background: white; color: var(--text-dark); border-bottom-left-radius: 4px; box-shadow: 0 2px 8px rgba(0,0,0,0.03); }
+        .msg-bubble.mine { background: var(--accent-gradient); color: white; border-bottom-right-radius: 4px; }
+        .msg-bubble.theirs { background: white; color: var(--text-dark); border-bottom-left-radius: 4px; box-shadow: 0 2px 8px rgba(0,0,0,0.03); }
 
         /* Timeline & Cover Photo */
         #view-timeline { display: none; width: 100%; flex-direction: column; align-items: center; gap: 20px; }
@@ -273,6 +274,10 @@
         #upload-progress { width: 100%; height: 4px; background: #e2e8f0; border-radius: 2px; margin-top: 10px; display: none; overflow: hidden; }
         #upload-bar { width: 0%; height: 100%; background: var(--accent-gradient); transition: 0.3s; }
         .emoji-list { display: none; position: absolute; bottom: 60px; right: 20px; background: white; padding: 10px; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); display: grid; grid-template-columns: repeat(5, 1fr); gap: 5px; width: 200px; }
+
+        @keyframes slideUp { from { transform: translateY(20px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
+        .animate-enter { animation: slideUp 0.4s ease-out forwards; }
+        .fade-in { animation: slideUp 0.3s ease-out forwards; }
 
         @media (max-width: 768px) {
             header { height: 60px; padding: 0 15px; }
