--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         .chat-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 1px solid rgba(0,0,0,0.05); padding-bottom: 15px; flex-shrink: 0; }
         .chat-window { flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 15px; padding: 10px; min-height: 0; }
 
-        /* MESSAGE ROW LAYOUT FIX */
+        /* MESSAGE ROW LAYOUT */
         .msg-row { display: flex; width: 100%; align-items: flex-end; gap: 10px; }
         .msg-row.mine { justify-content: flex-end; }
         .msg-row.theirs { justify-content: flex-start; }
