--- a/index.html
+++ b/index.html
@@ -231,6 +231,131 @@
             color: #ef4444 !important;
         }
 
+        /* MARKETPLACE STYLES */
+        .marketplace-item {
+            background: white;
+            border-radius: 16px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            transition: transform 0.3s;
+            cursor: pointer;
+        }
+
+        .marketplace-item:hover {
+            transform: translateY(-5px);
+        }
+
+        .marketplace-item img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .marketplace-item-content {
+            padding: 15px;
+        }
+
+        .marketplace-price {
+            font-weight: 700;
+            color: var(--accent-color);
+            font-size: 1.2rem;
+        }
+
+        .marketplace-location {
+            color: var(--text-gray);
+            font-size: 0.9rem;
+            margin-top: 5px;
+        }
+
+        /* PAGES STYLES */
+        .page-header {
+            background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
+            color: white;
+            padding: 30px;
+            border-radius: 24px 24px 0 0;
+            position: relative;
+        }
+
+        .page-avatar {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            border: 5px solid white;
+            background: white;
+            margin-top: -50px;
+            position: relative;
+            z-index: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2.5rem;
+            color: var(--accent-color);
+        }
+
+        .page-actions {
+            display: flex;
+            gap: 10px;
+            margin-top: 15px;
+        }
+
+        /* LIVE STREAM STYLES */
+        .live-stream-container {
+            position: relative;
+            width: 100%;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .live-stream-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: rgba(0,0,0,0.7);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 24px 24px 0 0;
+        }
+
+        .live-indicator {
+            background: #ef4444;
+            color: white;
+            padding: 5px 15px;
+            border-radius: 20px;
+            font-weight: bold;
+            animation: pulse 1.5s infinite;
+        }
+
+        @keyframes pulse {
+            0% { opacity: 1; }
+            50% { opacity: 0.7; }
+            100% { opacity: 1; }
+        }
+
+        .live-viewers {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            color: white;
+        }
+
+        .live-chat {
+            background: rgba(255,255,255,0.9);
+            border-radius: 0 0 24px 24px;
+            padding: 15px;
+            max-height: 300px;
+            overflow-y: auto;
+        }
+
+        .live-message {
+            padding: 8px 0;
+            border-bottom: 1px solid rgba(0,0,0,0.05);
+        }
+
+        /* NEW NAV ITEMS */
+        .nav-item.pages::before { content: "📄"; }
+        .nav-item.marketplace::before { content: "🛒"; }
+        .nav-item.live::before { content: "🔴"; }
+
         @media (max-width: 768px) {
             header { height: 60px; padding: 0 15px; }
             .container { flex-direction: column-reverse; height: calc(100dvh - 60px); }
@@ -241,6 +366,7 @@
             .messenger-container { flex-direction: column; gap: 0; background: transparent; }
             .friend-list { width: 100%; height: 80px; flex-direction: row; overflow-x: auto; padding: 10px; background: transparent; }
             .chat-area { border-radius: 15px 15px 0 0; padding: 10px; }
+            .marketplace-item img { height: 150px; }
         }
     </style>
 </head>
@@ -274,6 +400,7 @@
     <div id="video-modal">
         <div style="position: absolute; top: 20px; left: 20px; color: white; font-weight: bold; background: rgba(0,0,0,0.5); padding: 5px 15px; border-radius: 20px;">
             <span id="call-type-label">Video Call</span>
+            <span id="call-status-indicator" style="margin-left: 10px; font-size: 0.8rem;"></span>
         </div>
         <div class="video-grid">
             <video id="remoteVideo" autoplay playsinline></video>
@@ -297,6 +424,7 @@
             </div>
             <div id="user-dropdown" class="user-dropdown-content">
                 <div class="user-dropdown-item" onclick="openTimeline(currentUser)"><i class="fas fa-user"></i> Profile</div>
+                <div class="user-dropdown-item" onclick="createBusinessPage()"><i class="fas fa-store"></i> Create Page</div>
                 <div class="user-dropdown-item" onclick="handleSignOut()" style="color: #ef4444;"><i class="fas fa-sign-out-alt"></i> Sign Out</div>
             </div>
         </div>
@@ -306,6 +434,9 @@
         <aside>
             <div class="nav-item active" onclick="switchView('feed', this)"><i class="fas fa-stream"></i> <span>Feed</span></div>
             <div class="nav-item" onclick="switchView('messages', this)"><i class="fas fa-comment-alt"></i> <span>Chat</span></div>
+            <div class="nav-item" onclick="switchView('marketplace', this)"><i class="fas fa-shopping-cart"></i> <span>Marketplace</span></div>
+            <div class="nav-item" onclick="switchView('pages', this)"><i class="fas fa-flag"></i> <span>Pages</span></div>
+            <div class="nav-item" onclick="switchView('live', this)"><i class="fas fa-tv"></i> <span>Live</span></div>
             <div class="nav-item" onclick="switchView('notifications', this)"><i class="fas fa-bell"></i> <span>Alerts</span></div>
         </aside>
 
@@ -327,7 +458,7 @@
                                 <option value="private">🔒 Only Me</option>
                             </select>
                             <label style="font-size: 0.9rem; display: flex; align-items: center; gap: 5px; cursor: pointer;">
-                                <input type="checkbox" id="post-livestream"> <span style="color: #ef4444; font-weight: bold;">🔴 Live</span>
+                                <input type="checkbox" id="post-livestream"> <span style="color: #ef4444; font-weight: bold;">🔴 Go Live</span>
                             </label>
                         </div>
                         <button class="btn-modern" onclick="createPost()">Post</button>
@@ -368,6 +499,36 @@
                 </div>
             </div>
 
+            <div id="view-marketplace" style="display: none; width: 100%;">
+                <div class="glass-panel fade-in">
+                    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+                        <h2>Marketplace</h2>
+                        <button class="btn-modern" onclick="createListing()"><i class="fas fa-plus"></i> Sell Item</button>
+                    </div>
+                    <div id="marketplace-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px;"></div>
+                </div>
+            </div>
+
+            <div id="view-pages" style="display: none; width: 100%;">
+                <div class="glass-panel fade-in">
+                    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+                        <h2>Pages</h2>
+                        <button class="btn-modern" onclick="createBusinessPage()"><i class="fas fa-plus"></i> Create Page</button>
+                    </div>
+                    <div id="pages-list" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px;"></div>
+                </div>
+            </div>
+
+            <div id="view-live" style="display: none; width: 100%;">
+                <div class="glass-panel fade-in">
+                    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+                        <h2>Live Streams</h2>
+                        <button class="btn-modern" onclick="startLiveStream()" style="background: #ef4444;"><i class="fas fa-broadcast-tower"></i> Go Live</button>
+                    </div>
+                    <div id="live-streams-container" style="display: flex; flex-direction: column; gap: 20px;"></div>
+                </div>
+            </div>
+
             <div id="view-notifications" style="display: none;">
                 <div class="glass-panel fade-in">
                     <h2 style="margin-bottom: 20px;">Notifications</h2>
@@ -393,6 +554,57 @@
                     </div>
                 </div>
                 <div id="timeline-stream" style="width: 100%; max-width: 650px; display: flex; flex-direction: column; gap: 25px;"></div>
+            </div>
+
+            <!-- LIVE STREAM VIEW -->
+            <div id="view-live-stream" style="display: none; width: 100%; max-width: 800px;">
+                <div class="live-stream-container">
+                    <div class="live-stream-header">
+                        <div>
+                            <span class="live-indicator">LIVE</span>
+                            <span id="live-stream-title" style="margin-left: 10px; font-weight: bold;"></span>
+                        </div>
+                        <div class="live-viewers">
+                            <i class="fas fa-eye"></i>
+                            <span id="live-viewer-count">0</span> viewers
+                        </div>
+                    </div>
+                    <video id="live-stream-video" autoplay playsinline style="width: 100%; height: 400px; background: #000;"></video>
+                    <div class="live-chat" id="live-chat-container">
+                        <div id="live-chat-messages"></div>
+                        <div style="display: flex; gap: 10px; margin-top: 10px;">
+                            <input type="text" id="live-chat-input" class="input-modern" style="margin: 0; flex: 1;" placeholder="Type a comment...">
+                            <button class="btn-modern" onclick="sendLiveChat()">Send</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- BUSINESS PAGE VIEW -->
+            <div id="view-business-page" style="display: none; width: 100%;">
+                <div class="glass-panel fade-in" style="padding: 0; overflow: hidden;">
+                    <div class="page-header" id="page-header-display">
+                        <button class="btn-icon" style="position: absolute; top: 15px; right: 15px; background: rgba(255,255,255,0.2); color: white;" onclick="editPage()"><i class="fas fa-edit"></i></button>
+                    </div>
+                    <div style="padding: 0 25px 25px 25px;">
+                        <div class="page-avatar" id="page-avatar-display">
+                            <span id="page-initial">P</span>
+                        </div>
+                        <h1 id="page-name" style="margin-top: 10px;">Page Name</h1>
+                        <p id="page-description" style="color: var(--text-gray); margin-top: 5px;"></p>
+                        <div class="page-actions" style="margin-top: 20px;">
+                            <button class="btn-modern" onclick="likePage()"><i class="far fa-thumbs-up"></i> Like</button>
+                            <button class="btn-modern" onclick="messagePage()"><i class="fas fa-envelope"></i> Message</button>
+                            <button class="btn-modern" onclick="followPage()"><i class="far fa-bell"></i> Follow</button>
+                        </div>
+                        <div id="page-stats" style="display: flex; gap: 20px; margin-top: 20px; color: var(--text-gray);">
+                            <div><strong id="page-likes">0</strong> Likes</div>
+                            <div><strong id="page-followers">0</strong> Followers</div>
+                            <div><strong id="page-posts">0</strong> Posts</div>
+                        </div>
+                    </div>
+                </div>
+                <div id="page-posts-container" style="width: 100%; max-width: 650px; display: flex; flex-direction: column; gap: 25px; margin-top: 20px;"></div>
             </div>
         </main>
     </div>
